--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "scratch-cloud",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "A TypeScript library that allows communication with the scratch cloud servers.",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "ts-node test.ts",
+    "build": "tsc",
+    "build:doc": "jsdoc2md --files ./src/*.ts --template README.template.md --configure ./jsdoc2md.json > ./README.md",
+    "start": "tsc --watch"
   },
   "repository": {
     "type": "git",
@@ -18,6 +22,21 @@
   },
   "homepage": "https://github.com/ErrorGamer2000/scratch-cloud#readme",
   "devDependencies": {
+    "@babel/cli": "^7.18.10",
+    "@babel/core": "^7.19.1",
+    "@babel/preset-env": "^7.19.1",
+    "@babel/preset-typescript": "^7.18.6",
+    "@types/node": "^18.7.21",
+    "@types/node-fetch": "^2.6.2",
+    "@types/ws": "^8.5.3",
+    "jsdoc-babel": "^0.5.0",
+    "jsdoc-to-markdown": "^7.1.1",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
-  }
+  },
+  "dependencies": {
+    "node-fetch": "^2.6.6",
+    "ws": "^8.9.0"
+  },
+  "type": "commonjs"
 }
