--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
     "node-fetch": "^2.6.6",
     "ws": "^8.9.0"
   },
-  "type": "commonjs"
+  "type": "commonjs",
+  "publishConfig": {
+    "access": "public"
+  }
 }
